name:                crawl-github
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/konn/crawl-github#readme
license:             BSD3
license-file:        LICENSE
author:              Hiromi ISHII
maintainer:          konn.jinro _at_ gmail.com
copyright:           2018 (c) Hiromi ISHII
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable crawl-github
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded -O2
  build-depends:       base >= 4.7 && < 5
                     , wreq
                     , text
                     , lens
                     , bytestring
                     , containers
                     , aeson
                     , streaming
                     , http-types
                     , clock
                     , http-client
                     , monad-loops
                     , mtl
                     , haskell-src-exts
                     , unordered-containers
